carambah-v0.5.0/components/kafka-rest/environments/kubernetes/manifests/kafka-rest-k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-rest-proxy
  namespace: infometis
  labels:
    app: kafka-rest-proxy
    component: kafka-rest
    part-of: carambah
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-rest-proxy
  template:
    metadata:
      labels:
        app: kafka-rest-proxy
        component: kafka-rest
    spec:
      containers:
      - name: kafka-rest-proxy
        image: confluentinc/cp-kafka-rest:7.5.0
        imagePullPolicy: Never
        ports:
        - name: rest-proxy
          containerPort: 8082
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /
            port: 8082
          initialDelaySeconds: 30
          timeoutSeconds: 10
          periodSeconds: 30
        livenessProbe:
          httpGet:
            path: /
            port: 8082
          initialDelaySeconds: 60
          timeoutSeconds: 10
          periodSeconds: 30
      tolerations:
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-rest-service
  namespace: infometis
  labels:
    app: kafka-rest-proxy
    component: kafka-rest
    part-of: carambah
spec:
  selector:
    app: kafka-rest-proxy
  ports:
  - name: rest-proxy
    port: 8082
    targetPort: 8082
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: kafka-rest-stripprefix
  namespace: infometis
  labels:
    component: kafka-rest
    part-of: carambah
spec:
  stripPrefix:
    prefixes:
      - /kafka
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-rest-ingress
  namespace: infometis
  labels:
    component: kafka-rest
    part-of: carambah
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: infometis-kafka-rest-stripprefix@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /kafka
        pathType: Prefix
        backend:
          service:
            name: kafka-rest-service
            port:
              number: 8082
